GameGUI now semi-functional

--- a/assignment03/.vscode/launch.json
+++ b/assignment03/.vscode/launch.json
@@ -2,6 +2,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - GameGUI",
+            "request": "launch",
+            "mainClass": "GameGUI"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Test",
             "request": "launch",
             "mainClass": "Test"
