--- a/assignment04/makefile
+++ b/assignment04/makefile
@@ -1,4 +1,11 @@
-all: clean
+jar: clean
+	javac Paralax.java
+	jar -cmf Paralax.mf *.class
+
+run-jar: jar
+	java -jar Paralax.jar
+
+class: clean
 	javac Paralax.java
 	java Paralax
 
