Everything except new and save functional

--- a/project/makefile
+++ b/project/makefile
@@ -9,7 +9,7 @@ storyplayer:
 	$(RM) StoryPlayer/*.class StoryData/*.class
 
 storydesigner:
-	javac StoryDesigner/TestFile.java
+	javac StoryDesigner/StoryDesigner.java
 	jar cvmf StoryDesigner.MF StoryDesigner.jar StoryDesigner/*.class StoryData/*.class
 	$(RM) StoryDesigner/*.class StoryData/*.class
 
