--- a/project/makefile
+++ b/project/makefile
@@ -1,14 +1,14 @@
 
-default: storyplayer
+default: story-player
 
-all: storyplayer storydesigner
+all: story-player story-designer
 
-storyplayer:
+story-player:
 	javac StoryPlayer/GameGUI.java
 	jar cvmf StoryPlayer.MF StoryPlayer.jar StoryPlayer/*.class StoryData/*.class
 	$(RM) StoryPlayer/*.class StoryData/*.class
 
-storydesigner:
+story-designer:
 	javac StoryDesigner/StoryDesigner.java
 	jar cvmf StoryDesigner.MF StoryDesigner.jar StoryDesigner/*.class StoryData/*.class
 	$(RM) StoryDesigner/*.class StoryData/*.class
